--- a/SmartHome_AndroidClient/app/src/main/res/layout/activity_create_new_itemlist.xml
+++ b/SmartHome_AndroidClient/app/src/main/res/layout/activity_create_new_itemlist.xml
@@ -10,7 +10,7 @@
         android:inputType="textPersonName"
         android:hint="@string/name_for_new_list_hint"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"/>
 
@@ -21,7 +21,7 @@
         android:layout_height="35dp"
         android:layout_below="@+id/itemlist_name_editText"
         android:layout_alignStart="@+id/itemlist_name_editText"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/border_gray">
 
         <ImageView
@@ -46,21 +46,30 @@
 
     <Switch
         android:id="@+id/public_switch"
-        android:layout_width="100dp"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/itemlist_icon_relativeLayout"
         android:layout_below="@+id/itemlist_icon_relativeLayout"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:text="@string/public_switch"/>
+
+    <Switch
+        android:id="@+id/suggestions_switch"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/public_switch"
+        android:layout_below="@+id/public_switch"
+        android:layout_marginTop="20dp"
+        android:text="@string/suggestions_switch"/>
 
     <Button
         android:id="@+id/cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/cancel"
-        android:layout_marginTop="100dp"
-        android:layout_below="@+id/public_switch"
-        android:layout_alignStart="@+id/public_switch"/>
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/suggestions_switch"
+        android:layout_alignStart="@+id/suggestions_switch"/>
 
     <Button
         android:id="@+id/save_button"
