--- a/SmartHome_AndroidClient/app/src/main/res/layout/custom_navigationdrawer_row.xml
+++ b/SmartHome_AndroidClient/app/src/main/res/layout/custom_navigationdrawer_row.xml
@@ -26,15 +26,27 @@
         android:background="@drawable/ic_mode_edit_black_24dp"/>
 
     <TextView
+        android:id="@+id/navigation_drawer_list_count"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="5dp"
+        android:layout_toStartOf="@id/navigation_drawer_list_item_edit_btn"
+        android:textColor="@android:color/black"/>
+
+    <TextView
         android:id="@+id/navigation_drawer_list_item_name"
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="3dp"
         android:layout_centerVertical="true"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/drawer_list_item_icon"
-        android:layout_toStartOf="@id/navigation_drawer_list_item_edit_btn"
-        android:textColor="@android:color/black"/>
+        android:layout_toStartOf="@id/navigation_drawer_list_count"
+        android:textColor="@android:color/black"
+        android:ellipsize="end"
+        android:maxLines="1"/>
 </RelativeLayout>
